# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.12.6
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Support for world file. You need execute permissions for
	  /var/lib/portage or set SAVE_WORLD=true and run update-eix with
	  such permissions to make use of this feature.
	- Introduce --installed-slot, MATCH_IF_*SLOT
	- Allow "!!" lines in eix-sync to override environment variables like
	  FORCE_USECOLORS, see http://bugs.gentoo.org/show_bug.cgi?id=225963
	- Fix treatment of "-" in slotnames.
	  Thanks to Edward "Hades" <edward.hades at gmail.com> for the patch,
	  see http://bugs.gentoo.org/show_bug.cgi?id=225773
	- Fix PATH_MAX headers on FreeBSD-7. Thanks to
	  Javier Villavicencio <the_paya at gentoo.org> for the patch, see
	  http://bugs.gentoo.org/show_bug.cgi?id=226499
	- Fix recognition of system packages according to local settings.
	- Fix format documentation: Provide is HashedString not HashedWords
	  (this will probably change when eix format changes again).
	  Thanks to Charlie Shepherd <masterdriverz at gmail.com> for reporting
	- Minor simplifications and compatibility fixes.

*eix-0.12.5
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Introduce DIFF_SEPARATE_DELETED and let it default to true.
	- Introduce DIFF_PRINT_HEADER.
	- Ignore leading + or - for /var/db/pkg/*/*/{,I}USE for paludis.
	  Do the same with IUSE data in packages for EAPI=1. Thanks for the
	  hint to Leonardo Valeri Manera <l.valerimanera at gmail.com>
	- Fix error handling in pushback_lines_file(), see
	  http://bugs.gentoo.org/show_bug.cgi?id=220119
	- Fix some bsd shell incompatibilities in scripts, see
	  http://bugs.gentoo.org/show_bug.cgi?id=220397
	- Introduce MAKE_GLOBALS default /usr/share/portage/config/make.globals
	  See http://bugs.gentoo.org/show_bug.cgi?id=221271
	- Reorganize eixrc/defaults.cc
	- Export PATH and other portagesettings variables to ebuild.sh, see
	  http://bugs.gentoo.org/show_bug.cgi?id=219066
	- Minor documentation fixes.
